--- a/index.html
+++ b/index.html
@@ -3,61 +3,76 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Inkvera | Print & Deliver</title>
+
+  <title>Inkvera – Print. Pay. Delivered.</title>
+
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
 
-  <!-- NAVBAR -->
+  <!-- HEADER -->
   <header class="navbar">
-    <div class="logo">INKVERA</div>
+    <div class="logo">Inkvera</div>
+
     <nav>
       <a href="#home">Home</a>
-      <a href="#how">How It Works</a>
-      <a href="#upload" class="upload-nav">Upload File</a>
+      <a href="#how">How it works</a>
+      <a href="#upload" class="nav-cta">Upload file</a>
       <a href="#contact">Contact</a>
     </nav>
   </header>
 
-  <!-- HERO SECTION -->
+  <!-- HERO -->
   <section id="home" class="hero">
     <div class="hero-content">
-      <h1>Print Smarter.<br>Delivered Faster.</h1>
-      <p>Upload your documents, pay online, and get high-quality prints delivered to your door or ready for pickup.</p>
-      <a href="#upload" class="cta-button">UPLOAD FILE</a>
+      <h1>Print made easy.<br>Delivered with care.</h1>
+      <p>
+        Upload your documents, pay online, and receive beautiful prints
+        delivered to your door or ready for pickup.
+      </p>
+      <a href="#upload" class="hero-btn">Upload your file</a>
     </div>
   </section>
 
   <!-- HOW IT WORKS -->
   <section id="how" class="how">
-    <h2>How It Works</h2>
+    <h2>How Inkvera Works</h2>
+
     <div class="steps">
       <div class="step">
         <span>1</span>
         <h3>Upload</h3>
-        <p>Select your file and printing preferences.</p>
+        <p>Select your file and print options.</p>
       </div>
+
       <div class="step">
         <span>2</span>
         <h3>Pay</h3>
-        <p>Secure online payment in seconds.</p>
+        <p>Pay securely online in seconds.</p>
       </div>
+
       <div class="step">
         <span>3</span>
         <h3>Print & Deliver</h3>
-        <p>We print and deliver or prepare for pickup.</p>
+        <p>We print and deliver or prepare pickup.</p>
       </div>
     </div>
   </section>
 
-  <!-- UPLOAD SECTION -->
+  <!-- UPLOAD -->
   <section id="upload" class="upload">
     <h2>Upload Your File</h2>
-    <p>Supported formats: PDF, DOCX, JPG, PNG</p>
+    <p>PDF, DOCX, JPG, PNG supported</p>
 
     <div class="upload-box">
       <input type="file" />
-      <button>Continue to Payment</button>
+      <button>Continue to payment</button>
     </div>
   </section>
 
@@ -65,7 +80,7 @@
   <section id="contact" class="contact">
     <h2>Contact Us</h2>
     <p>Email: support@inkvera.com</p>
-    <p>Serving your city with fast & reliable printing.</p>
+    <p>Fast, friendly & reliable printing service.</p>
   </section>
 
   <!-- FOOTER -->
