--- a/index.html
+++ b/index.html
@@ -2,91 +2,166 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-  <title>Inkvera – Print. Pay. Delivered.</title>
-
-  <!-- Google Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
-
-  <link rel="stylesheet" href="style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Inkvera | Print & Deliver</title>
+  <link rel="stylesheet" href="style.css"/>
 </head>
-
 <body>
 
-  <!-- HEADER -->
-  <header class="navbar">
-    <div class="logo">Inkvera</div>
+<!-- NAVBAR -->
+<header class="navbar">
+  <div class="logo">Inkvera</div>
+  <nav>
+    <a href="#home">Home</a>
+    <a href="#how">How it works</a>
+    <a href="#upload" class="nav-cta">Upload file</a>
+    <a href="#contact">Contact</a>
+  </nav>
+</header>
 
-    <nav>
-      <a href="#home">Home</a>
-      <a href="#how">How it works</a>
-      <a href="#upload" class="nav-cta">Upload file</a>
-      <a href="#contact">Contact</a>
-    </nav>
-  </header>
+<!-- HERO -->
+<section id="home" class="hero">
+  <div class="hero-content">
+    <h1>Print made easy.<br>Delivered with care.</h1>
+    <p>Upload your documents, choose options, pay online, and receive quality prints.</p>
+    <a href="#upload" class="hero-btn">Upload your files</a>
+  </div>
+</section>
 
-  <!-- HERO -->
-  <section id="home" class="hero">
-    <div class="hero-content">
-      <h1>Print made easy.<br>Delivered with care.</h1>
-      <p>
-        Upload your documents, pay online, and receive beautiful prints
-        delivered to your door or ready for pickup.
-      </p>
-      <a href="#upload" class="hero-btn">Upload your file</a>
+<!-- HOW IT WORKS -->
+<section id="how" class="how">
+  <h2>How it works</h2>
+  <div class="steps">
+    <div class="step">
+      <span>1</span>
+      <h3>Upload</h3>
+      <p>Select one or multiple files to print.</p>
     </div>
-  </section>
+    <div class="step">
+      <span>2</span>
+      <h3>Choose options</h3>
+      <p>A4 / A3, color or B&W, delivery or pickup.</p>
+    </div>
+    <div class="step">
+      <span>3</span>
+      <h3>Pay & receive</h3>
+      <p>Pay securely and get prints delivered or ready for pickup.</p>
+    </div>
+  </div>
+</section>
 
-  <!-- HOW IT WORKS -->
-  <section id="how" class="how">
-    <h2>How Inkvera Works</h2>
+<!-- UPLOAD -->
+<section id="upload" class="upload">
+  <h2>Upload your files</h2>
+  <p>A4 / A3 · PDF, DOCX, JPG, PNG · CZK only</p>
 
-    <div class="steps">
-      <div class="step">
-        <span>1</span>
-        <h3>Upload</h3>
-        <p>Select your file and print options.</p>
+  <div class="upload-box">
+    <button id="uploadBtn">Choose files</button>
+    <input type="file" id="fileInput" multiple hidden />
+
+    <ul id="fileList" class="file-list"></ul>
+
+    <div id="options" class="options hidden">
+
+      <label>
+        Paper size
+        <select id="paperSize">
+          <option value="A4">A4</option>
+          <option value="A3">A3</option>
+        </select>
+      </label>
+
+      <label>
+        Color mode
+        <select id="colorMode">
+          <option value="bw">Black & White</option>
+          <option value="color">Color</option>
+        </select>
+      </label>
+
+      <label>
+        Copies
+        <input type="number" id="copies" min="1" value="1"/>
+      </label>
+
+      <label>
+        Delivery
+        <select id="delivery">
+          <option value="pickup">Pickup (Free)</option>
+          <option value="delivery">Delivery (+79 CZK)</option>
+        </select>
+      </label>
+
+      <div class="total">
+        Total: <span id="total">0 CZK</span>
       </div>
 
-      <div class="step">
-        <span>2</span>
-        <h3>Pay</h3>
-        <p>Pay securely online in seconds.</p>
-      </div>
-
-      <div class="step">
-        <span>3</span>
-        <h3>Print & Deliver</h3>
-        <p>We print and deliver or prepare pickup.</p>
-      </div>
+      <button class="pay-btn">Continue to payment</button>
     </div>
-  </section>
+  </div>
+</section>
 
-  <!-- UPLOAD -->
-  <section id="upload" class="upload">
-    <h2>Upload Your File</h2>
-    <p>PDF, DOCX, JPG, PNG supported</p>
+<!-- CONTACT -->
+<section id="contact" class="contact">
+  <h2>Contact</h2>
+  <p>Email: support@inkvera.com</p>
+</section>
 
-    <div class="upload-box">
-      <input type="file" />
-      <button>Continue to payment</button>
-    </div>
-  </section>
+<footer>
+  © 2026 Inkvera
+</footer>
 
-  <!-- CONTACT -->
-  <section id="contact" class="contact">
-    <h2>Contact Us</h2>
-    <p>Email: support@inkvera.com</p>
-    <p>Fast, friendly & reliable printing service.</p>
-  </section>
+<script>
+document.addEventListener("DOMContentLoaded", () => {
+  const uploadBtn = document.getElementById("uploadBtn");
+  const fileInput = document.getElementById("fileInput");
+  const fileList = document.getElementById("fileList");
+  const options = document.getElementById("options");
 
-  <!-- FOOTER -->
-  <footer>
-    <p>© 2026 Inkvera. All rights reserved.</p>
-  </footer>
+  const paperSize = document.getElementById("paperSize");
+  const colorMode = document.getElementById("colorMode");
+  const copies = document.getElementById("copies");
+  const delivery = document.getElementById("delivery");
+  const totalEl = document.getElementById("total");
+
+  let pages = 1; // placeholder
+  let fileCount = 0;
+
+  uploadBtn.addEventListener("click", () => {
+    fileInput.click();
+  });
+
+  fileInput.addEventListener("change", () => {
+    fileList.innerHTML = "";
+    fileCount = fileInput.files.length;
+
+    if (fileCount === 0) return;
+
+    Array.from(fileInput.files).forEach(file => {
+      const li = document.createElement("li");
+      li.textContent = file.name;
+      fileList.appendChild(li);
+    });
+
+    options.classList.remove("hidden");
+    calculate();
+  });
+
+  function calculate() {
+    let pricePerPage = paperSize.value === "A4" ? 3 : 6;
+    if (colorMode.value === "color") pricePerPage += 7;
+
+    let total = fileCount * pages * pricePerPage * Number(copies.value);
+    if (delivery.value === "delivery") total += 79;
+
+    totalEl.textContent = total + " CZK";
+  }
+
+  [paperSize, colorMode, copies, delivery].forEach(el => {
+    el.addEventListener("change", calculate);
+  });
+});
+</script>
 
 </body>
 </html>
